完成了全面部接口的二次封装和解耦
这个抖音无限滑动怎么实现啊，烦屎了

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
       href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.7.2/css/all.min.css"
       rel="stylesheet"
     />
+
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover"
+    />
+
+    <!-- 禁止苹果设备的自动缩放 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>一刻短剧</title>
   </head>
   <body>
