自定义播放器样式，实现了点击切换播放暂停

--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/icon.png" />
+    <link rel="stylesheet" href="./src/styles/play.scss" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.7.2/css/all.min.css"
       rel="stylesheet"
     />
-  
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
 
     <!-- 禁止苹果设备的自动缩放 -->
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>一刻短剧</title>
@@ -22,6 +24,5 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-  
   </body>
 </html>
