--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/icon.png" />
     <link rel="stylesheet" href="./src/styles/play.scss" />
+    <link rel="stylesheet" href="./src/styles/main.scss">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.7.2/css/all.min.css"
