使用ts重写请求接口，进行了打包优化实践

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
+    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
+    <!-- 可选的响应式样式 -->
+    <link href="https://vjs.zencdn.net/7.20.3/video-js-responsive.css" rel="stylesheet" />
+
     <link rel="icon" href="./src/assets/icon.png" />
     <link rel="stylesheet" href="./src/styles/play.scss" />
     <link rel="stylesheet" href="./src/styles/main.scss" />
@@ -24,6 +28,7 @@
   </head>
   <body>
     <div id="appp"></div>
+    <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
