将icon移入public下，优化vite配置文件

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- 可选的响应式样式 -->
     <link href="https://vjs.zencdn.net/7.20.3/video-js-responsive.css" rel="stylesheet" />
 
-    <link rel="icon" href="./src/assets/icon.png" />
+    <link rel="icon" href="./public/icon.png" />
     <link rel="stylesheet" href="./src/styles/play.scss" />
     <link rel="stylesheet" href="./src/styles/main.scss" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
